<resources>
    <string name="app_name">PantaGo</string>
    <string name="go_to_maps">Go to maps</string>
    <string name="title_activity_maps">PantaGo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Mailadresse</string>
    <string name="prompt_password">Kodeord</string>
    <string name="claim_button">RESERVER</string>
    <string name="upload_button">LÆG OP</string>
    <string name="number_of_objects">Hvor mange dåser/flasker</string>
    <string name="comment_hint">Kommentar (Valgfrit)</string>
    <string name="comment">Kommentar: </string>
    <string name="object_label">Antal dåser/flasker: </string>
    <string name="camera_icon_text">Klik for at lægge dit billede op</string>
    <string name="go_to_createUser">Opret bruger</string>
    <string name="open">Åben</string>
    <string name="close">Opret luk</string>
    <string name="facebook_app_id">2685476441730660</string>
    <string name="fb_login_protocol_scheme">fb2685476441730660</string>
    <string name="title_activity_remove">FjernAktivitet</string>
    <string name="hello_world">Hej Minecraft Verden!</string>
    <string name="collect">Afhent</string>
    <string name="no_adress">Ingen addresse</string>
    <string name="list">Liste</string>
    <string name="back">Tilbage</string>
    <string name="none">None</string>
    <string name="unclaim_button">Afbestil</string>
    <string name="far_toast_first">Du skal være tættere på for at reservere! Der er </string>
    <string name="far_toast_second"> km til panten.</string>
    <string name="collect_toast_first">Du skal være tættere på for at reservere! Der er </string>
    <string name="collect_toast_second"> km til panten.</string>
    <string name="insert_picture">Venligst indsæt billede</string>
    <string name="insert_number">Indsæt venligst tal</string>
    <string name="cannot_claim">Du skal afhente eller afbestille før du kan reservere</string>
    <string name="not_number">Ikke et gyldigt nummer</string>
    <string name="no_amount">Intet antal givet</string>
    <string name="fill_amount">Udfyld venligst antal dåser/flasker</string>
    <string name="amount_format">Antal: </string>
    <string name="post_button">LÆG OP</string>
    <string name="remove_button">FJERN</string>
    <string name="welcome_back">Velkomen tilbage: </string>
    <string name="fill_fieds">Udfyld venligst begge felter</string>
    <string name="auth_failed">Godkendelse fejlet</string>
    <string name="email_required">Mailadresse påkrævet</string>
    <string name="invalid_email">Ugyldig mailadresse adresse</string>
    <string name="password_required">Kodeord påkrævet</string>
    <string name="password_longer">Kodeord skal være længere</string>
    <string name="password_match">Kodeord er ikke identiske</string>
    <string name="user_creation">Bruger oprettelse lykkedes</string>
    <string name="welcome_pantago">Velkommen til PantaGo</string>
    <string name="logout">Log ud</string>
    <string name="min_ammount_pant">Min antal pant</string>
    <string name="max_distance">Max afstand</string>
    <string name="tag_et_billede_af_panten">Tag et billede af panten</string>
    <string name="new_user">Ny bruger?</string>
    <string name="sign_up"><u>Opret dig</u></string>
    <string name="login">Log ind</string>
    <string name="continue_with_facebook">Fortsæt med Facebook</string>
    <string name="amount_pant">Antal pant: </string>
</resources>